--- a/requirements.txt
+++ b/requirements.txt
@@ -2,36 +2,47 @@
 #    uv pip compile requirements.in -o requirements.txt
 asgiref==3.8.1
     # via django
-django==5.0.6
-    # via django-debug-toolbar
-django-debug-toolbar==4.3.0
+django==5.0.7
+    # via
+    #   -r requirements.in
+    #   django-debug-toolbar
+django-debug-toolbar==4.4.6
+    # via -r requirements.in
 django-environ==0.11.2
+    # via -r requirements.in
 gunicorn==22.0.0
+    # via -r requirements.in
 iniconfig==2.0.0
     # via pytest
 markdown-it-py==3.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
-packaging==24.0
+packaging==24.1
     # via
     #   gunicorn
     #   pytest
 pluggy==1.5.0
     # via pytest
-psycopg==3.1.18
-psycopg-binary==3.1.18
+psycopg==3.2.1
+    # via -r requirements.in
+psycopg-binary==3.2.1
     # via psycopg
 pygments==2.18.0
     # via rich
-pytest==8.2.0
-    # via pytest-django
+pytest==8.2.2
+    # via
+    #   -r requirements.in
+    #   pytest-django
 pytest-django==4.8.0
+    # via -r requirements.in
 rich==13.7.1
+    # via -r requirements.in
 sqlparse==0.5.0
     # via
     #   django
     #   django-debug-toolbar
-typing-extensions==4.11.0
+typing-extensions==4.12.2
     # via psycopg
-whitenoise==6.6.0
+whitenoise==6.7.0
+    # via -r requirements.in
