--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
 default_language_version:
-  python: python3.11
+  python: python3.13
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -13,13 +13,13 @@ repos:
       - id: check-case-conflict
       - id: check-merge-conflict
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: "1.16.0" # replace with latest tag on GitHub
+    rev: "1.22.2" # replace with latest tag on GitHub
     hooks:
       - id: django-upgrade
-        args: [--target-version, "4.2"] # Replace with Django version
+        args: [--target-version, "5.1"] # Replace with Django version
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.4.3
+    rev: v0.9.4
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
@@ -28,12 +28,18 @@ repos:
     hooks:
       - id: curlylint
         exclude: 'templates/snippets/timetable_search\.html'
+  - repo: https://github.com/adamchainz/djade-pre-commit
+    rev: "1.3.2"
+    hooks:
+    -   id: djade
+        args: [--target-version, "5.1"]
   - repo: https://github.com/rtts/djhtml
-    rev: 3.0.6
+    rev: 3.0.7
     hooks:
       - id: djhtml
         args:
           - --tabwidth=2
+        exclude: markdown_editor.html
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
     hooks:
