--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,29 @@
-[tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "config.settings_testing"
-python_files = "tests.py test_*.py *_tests.py"
+[project]
+name = "mydjangox"
+version = "1.0.0"
+description = "My Django project template. Inspired by Will Vincent's DjangoX."
+readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+  "django>=5.1.5",
+  "django-debug-toolbar>=5.0.1",
+  "django-environ>=0.12.0",
+  "gunicorn>=23.0.0",
+  "pytest>=8.3.4",
+  "pytest-django>=4.9.0",
+  "rich>=13.9.4",
+  "sentry-sdk>=2.20.0",
+  "whitenoise>=6.8.2",
+]
 
 [tool.curlylint.rules]
 image_alt = true
 
 [tool.ruff]
+line-length = 120
+target-version = "py313"
+
+[tool.ruff.lint]
 select = ["ALL"]
 ignore = [
   "G004",   # Logging statement uses f-string
@@ -16,13 +34,48 @@ ignore = [
   "TD002",  # Missing author in TODO
   "S308",   # suspicious-mark-safe-usage
 ]
+# Allow fix for all enabled rules (when `--fix`) is provided.
+fixable = ["ALL"]
+unfixable = []
 
-target-version = "py312"
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
+
+# Enable auto-formatting of code examples in docstrings. Markdown,
+# reStructuredText code/literal blocks and doctests are all supported.
+#
+# This is currently disabled by default, but it is planned for this
+# to be opt-out in the future.
+docstring-code-format = false
+
+# Set the line length limit used when formatting code snippets in
+# docstrings.
+#
+# This only has an effect when the `docstring-code-format` setting is
+# enabled.
+docstring-code-line-length = "dynamic"
+
+[tool.ruff.lint.per-file-ignores]
 "test*" = ["ALL"]
 "**/migrations/*" = ["ALL"]
 "manage.py" = ["ALL"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google" # Accepts: "google", "numpy", or "pep257".
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "config.settings_testing"
+python_files = "tests.py test_*.py *_tests.py"
